--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -7,7 +7,9 @@
 	<body>
 		<ul class="search-results">
 			<% items.each do |item| %>
-				<li class="etsy-item"> <%= item %></li>
+				
+				<li class="title"> <%= item["title"] %> </li>
+			<!-- 	<li class="etsy-item"> <%= item %></li> -->
 			<% end %>
 		</ul>
 	</body>
