--- a/lib/public/style.css
+++ b/lib/public/style.css
@@ -40,12 +40,16 @@ a:hover {
 hr {
 	clear: both;
 }
+
+.hy {
+	font-size: 8px;
+}
 .sidebar {
 	color: #0192b5;
 	float: left;
 	padding-left: 0px;
 	padding-right: 30px;
-	width: 25%;
+	width: 15%;
 	
 }
 
@@ -54,7 +58,7 @@ hr {
 	background-color: #FFFFFF;
 	border: 1px solid #e1E3DF;
 	border-bottom-color: #CBCCC9;
-	height: 1800px;
+	height: 10000px;
 	padding: 10px;
 	margin: 0 0 12px;
 	font-size: 18px;
@@ -64,6 +68,9 @@ hr {
 	color: #0192B5;
 }
 
+ul {
+	text-align: center;
+}
 li {
 	list-style-type: none;
 }
@@ -84,7 +91,7 @@ div.image:hover {
 
 .this {
 	width: 100%;
-	height: 175px;	
+	height: 170px;	
 }
 
 .listing {
