--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -19,7 +19,7 @@
 					<a href="https://www.etsy.com/search/jewelry" class="words">Jewelry</a>
 					<a href="https://www.etsy.com/search/craft-supplies-and-tools" class="words">Craft Supplies & Tools</a>
 					<a href="https://www.etsy.com/search/weddings" class="words">Weddings</a>
-					<a href="https://www.etsy.com/search/home-and-living" class="words">Home & Living</a>x		
+					<a href="https://www.etsy.com/search/home-and-living" class="words">Home & Living</a>		
 				</li></ul></a>
 		<hr> 
 
